[gd_scene load_steps=19 format=3 uid="uid://bs6x0ketm3hxv"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_b6y7p"]
[ext_resource type="Texture2D" uid="uid://dtiuxcghbggj" path="res://scenes/game_object/player/player.png" id="2_ccv18"]
[ext_resource type="PackedScene" uid="uid://q30s4qgv6j8m" path="res://scenes/ability/sword_ability/sword_ability_controller.tscn" id="2_p2vj8"]
[ext_resource type="PackedScene" uid="uid://8sls76pvcyy2" path="res://scenes/component/health_component.tscn" id="2_xrasc"]
[ext_resource type="PackedScene" uid="uid://boqkssff6bg7r" path="res://scenes/component/velocity_component.tscn" id="3_c82h8"]
[ext_resource type="PackedScene" uid="uid://b2kw61u05fdqe" path="res://scenes/component/random_audio_stream_player_2d.tscn" id="4_pjjrr"]
[ext_resource type="AudioStream" uid="uid://hkt7ewrp3bt8" path="res://assets/audio/impactMining_000.ogg" id="5_13vij"]
[ext_resource type="AudioStream" uid="uid://b7h0n5td126c0" path="res://assets/audio/impactMining_001.ogg" id="6_y00a3"]
[ext_resource type="AudioStream" uid="uid://bg2r53pc7fy8e" path="res://assets/audio/impactMining_002.ogg" id="7_njp6j"]
[ext_resource type="AudioStream" uid="uid://ctxidu617y41t" path="res://assets/audio/impactMining_003.ogg" id="8_erv8v"]
[ext_resource type="AudioStream" uid="uid://cakeqykbu1ykl" path="res://assets/audio/impactMining_004.ogg" id="9_7q3ic"]

[sub_resource type="Animation" id="Animation_uceyn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_i2r6c"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 1.5), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pav45"]
_data = {
"RESET": SubResource("Animation_uceyn"),
"walk": SubResource("Animation_i2r6c")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrl1a"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_1copo"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_se0m1"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wkx66"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_b6y7p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pav45")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_xrasc")]

[node name="VelocityComponent" parent="." instance=ExtResource("3_c82h8")]
max_speed = 100
acceration = 25.0

[node name="HitRandomAudioStreamPlayer2D" parent="." instance=ExtResource("4_pjjrr")]
stream_array = Array[AudioStream]([ExtResource("5_13vij"), ExtResource("6_y00a3"), ExtResource("7_njp6j"), ExtResource("8_erv8v"), ExtResource("9_7q3ic")])

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_p2vj8")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_hrl1a")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_1copo")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_ccv18")
offset = Vector2(0, -8)

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_se0m1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_wkx66")
